// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RenderInline > renders a bare ftp link as text with its URL 1`] = `
"Go to
ftp://example.com/file (ftp://example.com/file)
 for the file."
`;

exports[`RenderInline > renders a bare http link as text with its URL 1`] = `
"Go to
https://example.com (https://example.com)
 for more info."
`;

exports[`RenderInline > renders a bare mailto link as text with its URL 1`] = `
"Contact
mailto:team@example.com (mailto:team@example.com)
 for details."
`;

exports[`RenderInline > renders a markdown ftp link as text 1`] = `
"Download from
ftp (ftp://example.com/file)
."
`;

exports[`RenderInline > renders a markdown https link as text 1`] = `
"This is a
link (https://example.com)
."
`;

exports[`RenderInline > renders a markdown mailto link as text 1`] = `
"Contact us at
email (mailto:team@example.com)
."
`;

exports[`RenderInline > renders bold text correctly 1`] = `
"This is
bold
."
`;

exports[`RenderInline > renders inline code correctly 1`] = `
"This is
code
."
`;

exports[`RenderInline > renders italic text correctly 1`] = `
"This is
italic
."
`;

exports[`RenderInline > renders strikethrough text correctly 1`] = `
"This is
strikethrough
."
`;

exports[`RenderInline > renders underline text correctly 1`] = `
"This is
underline
."
`;

exports[`RenderInline Edge Cases > handles empty markdown content 1`] = `
"A
 ()
 link and
*
* bold."
`;

exports[`RenderInline Edge Cases > handles mixed and adjacent markdown types 1`] = `
"bold
link (https://a.com)
italic"
`;
